# simput

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  INSTALL.txt  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  doxygen.config  mac_solve_simput_dependencies.sh  simput-install.csh  simput-install.sh
extlib/: .gitignore  Makefile.am  Makefile.in  README_for_developers  cfitsio.GNUmakefile  configure.ac
extlib/ape/: Makefile.in
extlib/ape/include/: Makefile.am  Makefile.in
extlib/ape/src/: Makefile.am  Makefile.in  ape_binary.c  ape_error.c  ape_io.c  ape_list.c  ape_msg.c  ape_par.c  ape_par_group.c  ape_session.c  ape_test.c  ape_trad.c  ape_util.c  pil.c  pil_error.c
extlib/atFunctions/: Makefile.in
extlib/atFunctions/include/: Makefile.am  Makefile.in  atError.h  atFunctions.h  atSpline.h
extlib/atFunctions/src/: Makefile.am  Makefile.in  atAberration.c  atAddVect.c  atAngDistance.c  atAtTimeDToAtTime.c  atAtTimeToAtTimeD.c  atAzEl.c  atAzElSet.c  atBrazil.c  atCTime.c  atConvPol.c  atCopyVect.c  atCrossPts.c  atDecToRadian.c  atDegToDec.c  atDegToRA.c  atDivVect.c  atEarthElev.c  atEarthElev.txt  atEarthOccult.c  atEcliptic.c  atElementTime3.c  atEllipsoid.c  atEulerToQuat.c  atEulerToRM.c  atGeodcr.c  atGeodesic.c  atGeodetic.c  atGeodeticToGeographic.c  atGeographic.c  atGeographicToGeodetic.c  atGeomag.c  atGroundCoord.c  atHXDBrazil.c  atInterpolateEuler.c  atInterpolateQuat.c  atInvGeodetic.c  atInvRotMat.c  atInvVect.c  (+64 more)
extlib/cfitsio/: Makefile.in  configure  configure.in  libcfitsio.so.2
extlib/fftw/: FFTW3Config.cmake  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
extlib/fftw/api/: Makefile.in
extlib/fftw/dft/: Makefile.in
extlib/fftw/doc/: Makefile.in  stamp-vti  version.texi
extlib/fftw/genfft/: Makefile.in
extlib/fftw/kernel/: Makefile.in
extlib/fftw/libbench2/: Makefile.in
extlib/fftw/m4/: Makefile.in
extlib/fftw/mpi/: Makefile.in
extlib/fftw/rdft/: Makefile.in
extlib/fftw/reodft/: Makefile.in
extlib/fftw/simd-support/: Makefile.in
extlib/fftw/support/: Makefile.in
extlib/fftw/tests/: Makefile.in
extlib/fftw/threads/: Makefile.in
extlib/fftw/tools/: Makefile.in
extlib/heainit/: Makefile.am  Makefile.in  headas_init.c
extlib/heaio/: Makefile.am  Makefile.in  headas_stdio.c
extlib/heasp/: Makefile.am  Makefile.in  ReturnChannel.c
extlib/heautils/: HDgtcalf.c  HDgtcalf_test.c  Makefile.am  Makefile.in  headas_copykeys.c  headas_error.c  headas_error_init.c  headas_error_internal.h  headas_error_manager.c  headas_error_map.c  headas_file_check.c  headas_gti.c  headas_gti.html  headas_parstamp.c  headas_utils.c  headas_utils.h
extlib/wcslib/: CHANGES  GNUmakefile  INSTALL  README  THANKS  VALIDATION  configure  configure.ac  flavours  makedefs.in  wcsconfig.h.in  wcsconfig_f77.h.in  wcsconfig_tests.h.in  wcsconfig_utils.h  wcsconfig_utils.h.in
extlib/wcslib/C/: GNUmakefile  cel.c  cel.h  fitshdr.h  fitshdr.l  getwcstab.c  getwcstab.h  lin.c  lin.h  log.c  log.h  prj.c  prj.h  spc.c  spc.h  sph.c  sph.h  spx.c  spx.h  tab.c  tab.h  wcs.c  wcs.h  wcsbth.l  wcserr.c  wcserr.h  wcsfix.c  wcsfix.h  wcshdr.c  wcshdr.h  wcslib.h  wcsmath.h  wcspih.l  wcsprintf.c  wcsprintf.h  wcstrig.c  wcstrig.h  wcsulex.l  wcsunits.c  wcsunits.h  (+3 more)
extlib/wcslib/Fortran/: GNUmakefile  cel.inc  cel_data.f  cel_f.c  dis.inc  dis_data.f  dis_f.c  fitshdr.inc  fitshdr_data.f  fitshdr_f.c  getwcstab.inc  getwcstab_f.c  lin.inc  lin_data.f  lin_f.c  log.inc  log_data.f  log_f.c  prj.inc  prj_data.f  prj_f.c  spc.inc  spc_data.f  spc_f.c  sph.inc  sph_f.c  spx.inc  spx_data.f  spx_f.c  tab.inc  tab_data.f  tab_f.c  wcs.inc  wcs_data.f  wcs_f.c  wcserr.inc  wcserr_f.c  wcsfix.inc  wcsfix_data.f  wcsfix_f.c  (+7 more)
extlib/wcslib/doxygen/: Doxyfile  GNUmakefile  README  dis.sed  dis_extras.dox  doxextr.l  doxextr.sed  mainpage.dox  wcs.sed  wcserr.sed  wcshdr.sed  wcsutil.sed
extlib/wcslib/html/: annotated.html  cel_8h-source.html  cel_8h.html  cel_8h_source.html  classes.html  deprecated.html  diagnostics.html  dir_af99bb3c152a306abd27951285ad1127.html  dis_8h.html  dis_8h_source.html  files.html  fitshdr_8h-source.html  fitshdr_8h.html  fitshdr_8h_source.html  formula.repository  fortran.html  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x69.html  functions_0x6b.html  (+254 more)
labnh/: Makefile.am  labnh.c  labnh.par  labnh.pro  liblabnh.c  libposstring.c  posstring.h
libsimput/: Makefile.am  Makefile.in  arf.c  arf.h  common.h  datahandling.c  datastruct.c  fileaccess.c  fortran_sample.f95  fsimput.f95  input.c  librequirements.txt  multispec.c  multispec.h  parinput.c  parinput.h  rmf.c  rmf.h  simput.c  simput.h  simput_fortran.f95  simput_tree.c  simput_tree.h  vector.c  vector.h
sample/: Makefile.am  Makefile.in  crab.c  image2.fits  sample.c
sample/csample/: .gitignore  Makefile.am  Makefile.in  csample.c  image1.fits
sample/fsample/: .gitignore  Makefile.am  Makefile.in  fsample.f95
tools/galabs/: .gitignore  Makefile.am  Makefile.in  galabs.c  galabs.par  spectree.c  spectree.h
tools/labnh/: .gitignore  Makefile.am  Makefile.in  README  labnh.c  labnh.h  liblabnh.c  libposstring.c  posstring.h
tools/simputfile/: .gitignore  Makefile.am  Makefile.in  simputfile.c  simputfile.h  simputfile.par
tools/simputlc/: .gitignore  Makefile.am  Makefile.in  simputlc.c  simputlc.h  simputlc.par
tools/simputmerge/: .gitignore  Makefile.am  Makefile.in  simputmerge.c  simputmerge.h  simputmerge.par
tools/simputmulticell/: .gitignore  Makefile.am  simputmulticell.c  simputmulticell.h  simputmulticell.par
tools/simputmultispec/: .gitignore  Makefile.am  simputmultispec.c  simputmultispec.h  simputmultispec.par
tools/simputpsd/: .gitignore  Makefile.am  Makefile.in  simputpsd.c  simputpsd.h  simputpsd.par
tools/simputspec/: .gitignore  Makefile.am  Makefile.in  simputspec.c  simputspec.h  simputspec.par
tools/simputsrc/: .gitignore  Makefile.am  Makefile.in  simputsrc.c  simputsrc.h  simputsrc.par
(+303 files in other folders)
