AM_CFLAGS = -I@top_srcdir@/libsimput 
AM_CFLAGS += -Wall 
#AM_CFLAGS += -Wall -Werror

############ BINARIES #################

# The following line lists the programs that should be created and stored
# in the 'bin' directory.
bin_PROGRAMS = sample

sample_SOURCES = sample.c
sample_LDADD  = @top_builddir@/libsimput/libsimput.la


